--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ h2{
 
 @media screen and (min-width: 550px) and (max-width: 1000px) {
     #contador{
+        margin-left: 1em;
         margin-bottom: 0.6em;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-image: linear-gradient(to right, rgb(148, 148, 74), white);
@@ -102,5 +103,6 @@ h2{
         -webkit-background-clip: text;
         text-shadow: 1px 1px 10px rgba(255, 255, 255, 0.678);
         margin-top: 6em;
+        margin-left: 3em;
     }
 }
