--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h2{
 @media screen and (min-width: 550px) and (max-width: 1000px) {
     #contador{
         margin-left: -1em;
+        padding-left: 1em;
         margin-bottom: 0.6em;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-image: linear-gradient(to right, rgb(148, 148, 74), white);
